added hero + mainpage almost mobile compatible

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
 font-family: "Montserrat", sans-serif;
 font-weight: 700;
+user-select: none;
 }
 
 body {
@@ -75,7 +76,7 @@ ul > li {
 
 }
 
-li:hover {
+li:hover, li.currentPage {
     /* background-color: rgba(255, 217, 0, 0.575); */
     background: rgba(255,255,255,0.1);
     cursor: grab;
@@ -86,7 +87,27 @@ li:hover {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 7fr 0.25fr 4.5fr ;
+    grid-template-rows: 7fr 0.25fr 5fr ;
+}
+
+.meSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.meSection > h1 {
+    letter-spacing: 0.35rem;
+    word-break:normal;
+display: flex;
+justify-content: center;
+text-align: center;}
+
+.meSection > h3 {
+    margin-top: 0.5rem;
+    text-align: center;
 }
 
 .divider {
@@ -106,8 +127,8 @@ li:hover {
     width: 100%;
     position: relative;
     color: rgba(255, 255, 255, 0.336);
-    font-size: 2em;
-    letter-spacing: 2px;
+    font-size: clamp(1px,2rem,4vw);
+    letter-spacing: clamp(1px,0.5rem,0.01vw);
     text-align: center;
 }
 
@@ -136,5 +157,17 @@ li:hover {
     .typesSection > div {
         background-position-y: 15% !important;
         background-color: green;
+    }
+}
+
+@media (max-width:500px) {
+    .menuContainer {
+        width: 100%;
+        margin-top: 0;
+    }
+    .menuContainer li {
+        margin: 0;
+                border-radius: 0;
+
     }
 }
