--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,7 @@ ul > li {
 
 }
 
-li:hover, li.currentPage {
+li:hover, li.currentPage,.cta:hover {
     /* background-color: rgba(255, 217, 0, 0.575); */
     background: rgba(255,255,255,0.1);
     cursor: grab;
@@ -108,6 +108,12 @@ text-align: center;}
 .meSection > h3 {
     margin-top: 0.5rem;
     text-align: center;
+}
+
+.cta {
+    border: 0.05125em white solid;
+    border-radius: 5px;
+    padding: 0.5em;
 }
 
 .divider {
@@ -156,7 +162,6 @@ text-align: center;}
 @media (min-width:500px) {
     .typesSection > div {
         background-position-y: 15% !important;
-        background-color: green;
     }
 }
 
